# Autoracer_2025

./: README.md
gapFinder/: readme.md
rotary_mpc/: CMakeLists.txt  package.xml
rotary_mpc/config/: mpc_params.yaml  params.yaml
rotary_mpc/launch/: object_detect_launch.py
rotary_mpc/msg/: ClusterInfo.msg
rotary_mpc/rotate_path/: rotatePath_100.csv
rotary_mpc/src/: knn_tracker_node.cpp  mpc_bicycle_node.cpp  publish_opp_odom.cpp  scan_processor_node.cpp
